<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Soccer Report</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="equipo1">Equipo Local:</string>
    <string name="equipo2">Equipo Visitante:</string>
    <string name="local">Local</string>
    <string name="visitante">Visitante</string>
    <string name="sale">Sale</string>
    <string name="entra">Entra</string>
    <string name="fecha">Fecha:</string>
    <string name="hora">Hora:</string>
    <string name="jug">Jugador</string>
    <string name="minuto">Minuto</string>
    <string name="desc">Descripción</string>
    <string name="boton1">Button</string>
    <string name="button">Button</string>
    <string name="equipo_local">Equipo Local</string>
    <string name="equipo_visitante">Equipo Visitante</string>
    <string-array name="claseIncidencia">
        <item >Cambio</item>
        <item >Falta</item>
        <item >Falta que marca el asistente 1</item>
        <item >Falta que marca el asistente 2</item>
        <item >Fuera de Juego</item>
        <item >Gol</item>
		<item >No Fuera de Juego</item>
		<item >Penalti</item>
		<item >Tarjeta Amarilla</item>
		<item >Tarjeta Roja</item>
		<item >Ventaja</item>
    </string-array>

</resources>